--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Vur vur rahatlarsın</title>
+<title>Boran'ı Pataklama Simülatörü v1.0</title>
 <style>
   body, html {
     margin: 0;
@@ -151,4 +151,5 @@
 </body>
 
 </html>
+
 
